--- a/app/assets/stylesheets/yeti/variables.less
+++ b/app/assets/stylesheets/yeti/variables.less
@@ -20,8 +20,8 @@
 
 @brand-primary:         #008cba;
 @brand-success:         #43ac6a;
-@brand-warning:         #E99002;
-@brand-danger:          #F04124;
+@brand-warning:         lighten(#E99002, 10%);
+@brand-danger:          darken(#F04124, 10%);
 @brand-info:            #5bc0de;
 @white:					#fff;
 
